--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 micronaut:
   application:
     name: micronautNuxtTemplate
+  router:
+    static-resources:
+      default:
+        enabled: true
+        paths:
+          - classpath:public
+        mapping: /*
